# MLrepository

./: PizzaAnalysis.ipynb  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
notebooks/: PizzaAnalysis.ipynb
notebooks/tests/: app.py
tests/: app.py  testes.ipynb
