[project]
name = "pizza-ml"
version = "0.1.0"
description = "Simple machine learning project using linear regression to predict pizza prices."
authors = [
    {name = "Gabryella Fachini",email = "gabryellafachini@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "scikit-learn",
    "streamlit",
    "matplotlib"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"